# django_rest_social_network

./: .env.example  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
apps/categories/: admin.py  models.py  serializers.py  views.py
apps/categories/migrations/: 0001_initial.py  0002_alter_category_name_category_category_name_idx.py
apps/likes/: admin.py  models.py  serializers.py  views.py
apps/likes/migrations/: 0001_initial.py  0002_like_ix_like_user_post.py
apps/posts/: admin.py  models.py  serializers.py  views.py
apps/posts/migrations/: 0001_initial.py  0002_alter_post_user.py  0003_post_likes_count.py  0004_alter_post_likes_count.py  0005_post_posts_category_idx_post_posts_user_idx.py
apps/users/: admin.py  models.py  serializers.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_customuser_options_and_more.py
rest_soc_network/: asgi.py  settings.py  urls.py  views.py  wsgi.py
